polished the index font Awesomes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <!-- Favicons
     ================================================== -->
+<link rel="stylesheet" href="/countries/fontawesome/css/font-awesome.min.css">
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
@@ -93,13 +94,14 @@
 
       <div class="service-box">
         <div class="service-icon">
-          <i class="fa fa-address-card"></i>
+          <i class="fa fa-user" aria-hidden="true"></i>
         </div>
         <div class="service-title">Visa</div>
         <div class="service-desc">
           Give us your passport, we will give you your visa, simple as that.
         </div>
       </div>
+
       <div class="service-box">
         <div class="service-icon">
           <i class="fa fa-plane"></i>
@@ -131,7 +133,7 @@
       </div>
       <div class="service-box">
         <div class="service-icon">
-          <i class="fa fa-luggage-cart"></i>
+          <i class="fa fa-briefcase" aria-hidden="true"></i>
         </div>
         <div class="service-title">Lagguage Transport</div>
         <div class="service-desc">
@@ -149,7 +151,7 @@
       </div>
       <div class="service-box">
         <div class="service-icon">
-          <i class="fa fa-glass-cheers"></i>
+          <i class="fa fa-glass" aria-hidden="true"></i>
         </div>
         <div class="service-title">Good bye event</div>
         <div class="service-desc">
@@ -158,7 +160,7 @@
       </div>
       <div class="service-box">
         <div class="service-icon">
-          <i class="fa fa-books"></i>
+          <i class="fa fa-graduation-cap" aria-hidden="true"></i>
         </div>
         <div class="service-title">IELTS, TOEFL</div>
         <div class="service-desc">
