--- a/countries/china.html
+++ b/countries/china.html
@@ -18,6 +18,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
 
+	<link rel="stylesheet" href="fontawesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -116,14 +117,15 @@
                      </div>
                      <div class="wrap-price">
                      	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Starts</li>
-	                        <li class="pricing__feature">Ends</li>
-	                        <li class="pricing__feature">English</li>
-	                        <li class="pricing__feature">Chinese</li>
-	                        <li class="pricing__feature">Language year</li>
-	                        <li class="pricing__feature">Bachelors</li>
-							 <li class="pricing__feature">PhD</li>
-							 <li class="pricing__feature">Cultural Visit</li>
+	                        <li class="pricing__feature">Starts&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <b>November</b></li>
+	                        <li class="pricing__feature">Ends &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <b>December</b></li>
+	                        <li class="pricing__feature">English Majors &emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i> </li>
+	                        <li class="pricing__feature">Chinese Majors &emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i></li>
+	                        <li class="pricing__feature">Language year &emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i></li>
+							<li class="pricing__feature">Bachelors &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-times" aria-hidden="true"></i></li>
+							<li class="pricing__feature">Masters &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-times" aria-hidden="true"></i></li>
+							 <li class="pricing__feature">PhD&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-times" aria-hidden="true"></i></li>
+							 <li class="pricing__feature">Cultural Visit &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i></li>
 	                     </ul>
                      </div>
                   </div>
@@ -144,13 +146,14 @@
                      </div>
                      <div class="wrap-price">
                      	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                         <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
+	                        <li class="pricing__feature">Starts&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <b>February</b> </li>
+	                        <li class="pricing__feature">Ends &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <b>July</b></li>
+	                        <li class="pricing__feature">English &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i></li>
+	                        <li class="pricing__feature">Chinese &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i></li>
+							<li class="pricing__feature">Language year &emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i></li>
+							<li class="pricing__feature">Bachelors &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i></li>
+							<li class="pricing__feature">PhD &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i></li>
+							<li class="pricing__feature">Cultural Visit &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check" aria-hidden="true"></i></li>
 	                     </ul>
                      </div>
                   </div>
