--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="section-title">
             <h2>Why us?</h2>
           </div>
-          
+
           <p>Because we are the best at what we do, Because we don't give you a half services
           and leave you to hustle. We want to serve you. </p>
           <div class="section-title">
@@ -371,7 +371,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="team-img"><img src="img/chef.jpg" alt="..."></div>
+        <div class="team-img"><img src="img/chef.jpg" alt="..." width="300px" ></div>
       </div>
     </div>
   </div>
