--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="team-img"><img src="img/chef.jpg" alt="..." width="300px" ></div>
+        <div class="team-img"><img class="dog"src="img/chef.jpg" alt="..." ></div>
       </div>
     </div>
   </div>
